agregamos archivos git

--- a/CLASE 0/prueba-git.html
+++ b/CLASE 0/prueba-git.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Holis soy yo</h1>
+    <h2>comandos para git</h2>
+    <ol>
+        <li>git init</li>
+        <li>git status</li>
+        <li>git add.</li> 
+        <li>git commit -m "mensajes aca"</li>
+        <hr>
+        <h2>configuracion pára git</h2>
+
+    </ol>
 </body>
 </html>
