--- a/CLASE 0/prueba-git.html
+++ b/CLASE 0/prueba-git.html
@@ -15,8 +15,12 @@
         <li>git add.</li> 
         <li>git commit -m "mensajes aca"</li>
         <hr>
-        <h2>configuracion pára git</h2>
-
+        <h2>una vez creado el repositorio aparecen nuevos comandos</h2>
+        <hr>
+        <li>git branch</li>
+        <li>git remote</li>
+        <li>git push</li>
+        
     </ol>
 </body>
 </html>
